--- a/index.html
+++ b/index.html
@@ -26,6 +26,23 @@
             grid-template-columns: repeat(2, 1fr);
             gap: 5px;
            }
+           /* responsive media query */
+           @media screen and (max-width:576px) {
+            .row{
+                flex-direction: column;
+                height: auto;
+            }
+            .square-collage{
+                grid-template-columns: 1fr;
+            }
+           }
+           /* medium devices */
+           @media screen and (min-width:576px) and(max-width:992px) {
+            .row{
+                flex-direction: column;
+                height: auto;
+            }
+           }
         </style>
     </head>
     <body>
